--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -130,6 +130,9 @@ spec:
         - name: crypto10
           mountPath: /opt/explorer/app/platform/fabric/config.json
           subPath: config.json
+        - name: crypto11
+          mountPath: /etc/hosts
+          subPath: nnn
         
       volumes:
       - name: connection
@@ -165,6 +168,9 @@ spec:
       - name: crypto10
         configMap:
           name: {{ template "explorer.fullname" . }}-crypto10
+      - name: crypto11
+        configMap:
+          name: {{ template "explorer.fullname" . }}-crypto11
       - name: explorer-data
       {{- if .Values.persistence.enabled }}
         persistentVolumeClaim:
