--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -24,6 +24,7 @@ spec:
       - name: {{ template "explorer.fullname" . }}
         image: {{ template "explorer.image" . }}
         imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
+        command: ["sh" , "-c" , "sleep 60"]
         env:
         - name: TZ
           value: "Asia/Singapore"
